# kurbo

./: .clippy.toml  .gitignore  .rustfmt.toml  .travis.yml  .typos.toml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/: copyright.sh
.github/workflows/: ci.yml
bazo/: Cargo.toml  README.md
bazo/src/: affine.rs  arc.rs  axis.rs  circle.rs  common.rs  ellipse.rs  insets.rs  lib.rs  line.rs  point.rs  rect.rs  rounded_rect.rs  size.rs  svg.rs  translate_scale.rs  triangle.rs  vec2.rs
benches/: cubic_arclen.rs  euler.rs  quad_arclen.rs  quartic.rs  rect_expand.rs
docs/math/: README.md  impl_mulaffine_for_translatescale.mathml  impl_multranslatescale_for_affine.mathml  translatescale.tex
examples/: arclen_accuracy.rs  circle.rs  cubic_arclen.rs  cubic_fun.rs  ellipse.rs  euler.rs  euler2.rs  fit_poly.rs  offset.rs  quad_intersect.rs  simplify.rs  svg_path.rs
kurbo/: Cargo.toml  README.md
kurbo/benches/: cubic.rs  cubic_arclen.rs  nearest.rs  quad_arclen.rs  quartic.rs  rect_expand.rs
kurbo/examples/: arclen_accuracy.rs  circle.rs  cubic_arclen.rs  ellipse.rs  offset.rs  quad_intersect.rs  stroke.rs
kurbo/src/: affine.rs  arc.rs  axis.rs  bezpath.rs  circle.rs  common.rs  cubicbez.rs  ellipse.rs  expand.rs  fit.rs  green.rs  insets.rs  interop_euclid.rs  interop_objc2.rs  interop_objc2_core_graphics.rs  lib.rs  line.rs  mindist.rs  moments.rs  offset.rs  param_curve.rs  point.rs  quadbez.rs  quadspline.rs  rect.rs  rounded_rect.rs  rounded_rect_radii.rs  shape.rs  simplify.rs  size.rs  stroke.rs  svg.rs  transform3d.rs  transform_class.rs  translate_scale.rs  triangle.rs  vec2.rs
kurbo_constraints/: Cargo.toml  LICENSE-MIT  README.md
kurbo_constraints/src/: constraint.rs  debuginfo.rs  handle.rs  lib.rs  solver.rs
poly-cool/: Cargo.toml  LICENSE-MIT  README.md
poly-cool/benches/: cubic_roots.rs  eval.rs  quadratic_roots.rs
poly-cool/src/: arbitrary.rs  cubic.rs  lib.rs  libm_polyfill.rs  poly.rs  poly_dyn.rs  quadratic.rs  yuksel.rs
polycool/: CHANGELOG.md  Cargo.toml  README.md
polycool/benches/: cubic_roots.rs  eval.rs  quadratic_roots.rs
polycool/src/: arbitrary.rs  cubic.rs  lib.rs  libm_polyfill.rs  poly.rs  poly_dyn.rs  quadratic.rs  yuksel.rs
proptest/: Cargo.toml
proptest/src/: main.rs
src/: affine.rs  arc.rs  bezpath.rs  circle.rs  common.rs  concrete_shape.rs  cubicbez.rs  curve_intersections.rs  ellipse.rs  epsilon.rs  euclid.rs  euler.rs  fat_line.rs  fit.rs  image.rs  insets.rs  lib.rs  line.rs  mindist.rs  offset.rs  param_curve.rs  param_curve_clipping.rs  pathops.rs  pathops2.rs  point.rs  primitive_shape.rs  quadbez.rs  quadspline.rs  real.rs  rect.rs  rounded_rect.rs  rounded_rect_radii.rs  shape.rs  simplify.rs  size.rs  static_shape.rs  stroke.rs  svg.rs  translate_scale.rs  triangle.rs  (+1 more)
src/paths/: mod.rs  svg.rs
src/paths/svg/: mod.rs  onevec.rs  string_repr.rs
