[package]
name = "polycool"
version = "0.4.0"
license.workspace = true
edition.workspace = true
description = "Polynomial root-finding"
keywords = ["polynomial", "roots", "numerical"]
categories = ["mathematics"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []
arbitrary = ["dep:arbitrary"]
# Use floating point implementations from libm
libm = ["dep:libm"]

[dependencies]
arbitrary = { workspace = true, optional = true }
arrayvec = { workspace = true }
libm = { workspace = true, optional = true }

[dev-dependencies]
arbitrary = { workspace = true }
arbtest = { workspace = true }

# wasm doesn't support rayon, so disable criterion's rayon support. (In
# principle we could make it target-dependent.)
criterion = { workspace = true, features = ["plotters", "cargo_bench_support"] }

[lints]
workspace = true

[[bench]]
name = "cubic_roots"
harness = false

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "quadratic_roots"
harness = false
